# CodeLyzer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REFACTORING.md  SECURITY.md  _html.py  ast_analyzers.py  cli.py  config.py  console.py  core.py  helpers.py  main.py  pyproject.toml  requirements.txt  test_run.py  tree_sitter_test.py  utils.py
codelyzer/: __init__.py  _html.py  ast_analyzers.py  cli.py  config.py  console.py  core.py  helpers.py  metrics.py  utils.py
codelyzer/analyzers/: __init__.py  code_smell.py  complexity.py  pattern.py  security.py
test_examples/: setup_tree_sitter.py  test.js  test.py  test.rs  test.ts  test_analyzers.py
