[tool.poetry]
name = "codelyzer"
version = "0.1.0"
description = "A powerful, extensible static code analysis tool with multi-language support"
authors = ["Alaamer <ahmedmuhmmed239@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alaamer12/CodeLyzer"
documentation = "https://github.com/alaamer12/CodeLyzer#readme"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.6.0"
click = "^8.1.6"
jinja2 = "^3.1.2"
colorama = "^0.4.6"
pydantic = "^2.4.2"
astroid = "^3.0.1"
esprima-python = "^0.6.0"
ast-comments = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-factoryboy = "^2.5.1"
ruff = "^0.1.0"
mypy = "^1.5.1"
black = "^23.10.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
codelyzer = "codelyzer.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]
ignore = [
    "E501",    # Line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Unused imports
"test_*.py" = ["ANN"]    # Missing type annotations in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = "--cov=codelyzer --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
] 