[tool.poetry]
name = "codelyzer"
version = "0.1.0b7"
description = "A powerful, extensible static code analysis tool with multi-language support"
authors = ["Alaamer <ahmedmuhmmed239@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alaamer12/CodeLyzer"
documentation = "https://github.com/alaamer12/CodeLyzer#readme"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^14.0.0"
pandas = "^2.3.0"
typer = "^0.16.0"


[tool.poetry.scripts]
lyz = "codelyzer.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"